<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nuclide Library</string>
    <string name="energy">Energy</string>
	<string name="lowprob">Low Prob</string>
    <string name="search">Search</string>
    <string name="second">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="years">years</string>
    <string name="keV">keV</string>
    <string name="mint12">min t1/2</string>
    <string name="kev_plusminus">keV ±</string>
    <string name="percent">%</string>
    <string name="lowprobCutoff">Cut off for low probability emission</string>
    <string name="settings">Settings</string>
	<string name="ioErrorDatabase">io error - could not copy database</string>
	<string name="copy_asset_error">Failed to copy asset file: </string>
	<string name="databaseCopied">database copied</string>
	<string name="errCreateFolder">could not create folder</string>
	<string name="nuclide">Nuclide</string>
	<string name="massnumber">Mass number</string>
	<string name="element">Element</string>
	<string name="noDataFound">No data.found</string>
	<string name="gammaLineProb">Gamma line (probability) keV: </string>
	<string name="backarrow">&lt;-</string>
	<string name="nucsearch">Nuclide search</string>
	<string name="about">About</string>
	<string name="appAbout">Gamma energy library. Search for lines within an energy span or for information on a nuclide.\n\nSource code on https://github.com/sickel/nuclib</string>
	<string name="appCredit">Data from https://www.cpp.edu/~pbsiegel/bio431/genergies.html (pbsiegel) and https://www-nds.iaea.org/xgamma_standards/genergies1.htm (IAEA). Where data are.available from both sources, IAEA data have been used.\n\nDeveloped in aide, https://play.google.com/store/apps/details?id=com.aide.ui.</string>
	<string name="versionText">Version: %s</string>
	<string name="rounding">Number of decimals</string>
	<string name="defWidth">Default width</string>
	<string name="appCopyright">(c) Morten Sickel 2016 licenced under GPL v2 or later</string>
	<string name="appHelp"><p>Type in an energy in keV and an uncertainty in percent or keV (default 5percent) or type in an energy span directly. \n</p><br />
		<p>Check "low probability" to search and display lines with low probability (default, p&lt;0.01).\n</p>
		Type in a halflife to limit the search to nuclides with a longer half life.\n
		Tap a nuclide in the search results to get more information.</string>
	<string name="help">Help</string>
</resources>
	
