<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="horizontal"
		android:id="@+id/llHolder">

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/element"/>

		<EditText
			android:layout_height="wrap_content"
			android:layout_width="50dp"
			android:ems="10"
			android:id="@+id/etElement"/>

		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/massnumber"/>

		<EditText
			android:layout_height="wrap_content"
			android:inputType="number"
			android:layout_width="50dp"
			android:ems="10"
			android:id="@+id/etMassnumber"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/search"
			android:onClick="nuclideSearchButton"/>
		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/backarrow"
			android:onClick="closeActivity"
			android:id="@+id/btBack"/>
		
	</LinearLayout>

	<ListView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:id="@+id/lvNuclide"/>

</LinearLayout>

